<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/v_1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/grey"
            android:contentDescription="@string/photo" />

        <TextView
            android:id="@+id/photo_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/photo"
            android:textSize="72sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/v_1"
            android:layout_marginStart="38dp"
            android:layout_marginBottom="24dp"
            android:layout_toEndOf="@+id/photo_1"
            android:contentDescription="@string/photo"
            android:src="@drawable/ic_camera" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_1"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:autofillHints="@string/title"
        android:inputType="text"
        android:text="@string/title"
        tools:ignore="LabelFor" />


    <EditText
        android:id="@+id/et_2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/price"
        android:inputType="number"
        android:text="@string/price"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et_3"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/et_2"
        android:autofillHints="@string/location"
        android:drawableEnd="@drawable/ic_location"
        android:inputType="text"
        android:text="@string/location"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_3"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:autofillHints="@string/description"
        android:inputType="text"
        android:text="@string/description"
        tools:ignore="LabelFor" />


    <EditText
        android:id="@+id/et_5"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_4"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/inventory"
        android:inputType="text"
        android:text="@string/inventory"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et_6"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_4"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/et_5"
        android:autofillHints="@string/weight"
        android:inputType="number"
        android:text="@string/weight"
        tools:ignore="LabelFor" />

</RelativeLayout>